java-surefire/src/test/java/org/sonar/plugins/surefire/data/SurefireStaxHandlerTest#shouldHaveErrorsAndFailures().mjava
  @Test
  void shouldHaveErrorsAndFailures() throws XMLStreamException {
    parse("errorsAndFailures.xml");
    UnitTestClassReport report = index.get("org.sonar.Foo");
    assertThat(report.getErrors()).isEqualTo(1);
    assertThat(report.getFailures()).isEqualTo(1);
    assertThat(report.getResults().size()).isEqualTo(2);

    // failure
    UnitTestResult failure = report.getResults().get(0);
    assertThat(failure.getDurationMilliseconds()).isEqualTo(5L);
    assertThat(failure.getStatus()).isEqualTo(UnitTestResult.STATUS_FAILURE);
    assertThat(failure.getName()).isEqualTo("testOne");
    assertThat(failure.getMessage()).startsWith("expected");

    // error
    UnitTestResult error = report.getResults().get(1);
    assertThat(error.getDurationMilliseconds()).isZero();
    assertThat(error.getStatus()).isEqualTo(UnitTestResult.STATUS_ERROR);
    assertThat(error.getName()).isEqualTo("testTwo");
  }

